--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 *{
     box-sizing: border-box;
     margin: 0;
+    padding: 0;
 }
 body{
     font-family: 'Poppins', sans-serif;
@@ -54,6 +55,8 @@ footer{
 
 /* padding margin */
 .seccion-sucursales, 
+.seccion-box,
+.seccion-impuestos,
 .seccion-productos, 
 footer{
     padding: 6rem 0rem;
@@ -97,6 +100,69 @@ button{
     animation: shake 25s infinite;  
 }
 
+
+/* section box  */
+.seccion-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.contenedor-box{
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: center;
+    align-items: center;
+    width: 70vw;
+}
+.contenedor-box-img{
+    width: 80%;
+    height: 5%;
+    margin: 0 3rem 1.5rem 3rem;
+}
+
+.contenedor-box-img img{
+    width: 100%;
+    border-radius: 10px;
+    cursor: pointer;
+    filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.7)); 
+}
+
+/* seccion-impuestos */
+.seccion-impuestos{
+    display: flex;
+    justify-content: flex-start;
+}
+.seccion-impuestos .impuestos-img {
+    width: 50%;
+}
+.seccion-impuestos .impuestos-img img{
+    width: 100%;
+}
+.seccion-impuestos  .contenedor-servicios{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding-left: 1.5rem;
+}
+.contenedor-servicios h3{
+    font-weight: 500;
+    font-size: 1.5rem;
+}
+.contenedor-servicios button{
+    background-color: transparent;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
+    padding: .5rem 2rem;
+    margin-top: 1.5rem;
+    border-radius: 10px;
+    border: 4px solid #1EBCE2;
+}
+.contenedor-servicios button a{
+    text-decoration: none;
+    color: #111111;
+}
+
 /* section sucursales  */
 .seccion-sucursales{
     text-align: center;
@@ -124,39 +190,6 @@ button{
 }
 .sucursales .provincias option:selected{
     border: none;
-}
-
-/* seccion-impuestos */
-.seccion-impuestos{
-    display: flex;
-    justify-content: flex-start;
-    padding: 1rem 0;
-}
-.seccion-impuestos .impuestos-img{
-    width: 50%;
-}
-.seccion-impuestos .impuestos-img img{
-    width: 100%;
-}
-.seccion-impuestos  .contenedor-servicios{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    padding-left: 1.5rem;
-}
-.seccion-impuestos  .contenedor-servicios h3{
-    font-weight: 500;
-    font-size: 1.5rem;
-}
-.seccion-impuestos .contenedor-servicios button{
-    background-color: transparent;
-    font-family: 'Poppins', sans-serif;
-    font-size: 1rem;
-    padding: .5rem 2rem;
-    margin-top: 1.5rem;
-    border-radius: 10px;
-    border: 4px solid #1EBCE2;
 }
 
 /* section seccion-productos  */
@@ -197,7 +230,7 @@ footer .contenedor-informacion div h4{
     width: 80%;
 }
 .contenedor-informacion div{
-    width: 20vw;
+    width: 16vw;
 }
 .contenedor-informacion div a {
     text-align: center;
@@ -213,7 +246,7 @@ footer .contenedor-informacion div h4{
 }
 
 footer .contenedor-registro{
-    padding-top: 8rem;
+    padding-top: 5rem;
 }
 
 footer .contenedor-registro #ver-mas{
