--- a/style.css
+++ b/style.css
@@ -12,7 +12,9 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
-
+.display-flex{
+    display: flex;
+}
 /*****************************
     flexbox
 ******************************/
@@ -21,7 +23,7 @@ header,
 .seccion-impuestos,
 .contenedor-videos,
 .contenedor-informacion,
-.contenedor-redes{
+.contenedor-informacion div .contenedor-redes{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -133,10 +135,6 @@ header{
     margin-top: 0.5rem;
 }
 .menu-burger{
-    display: none;
-}
-.display{
-    display: flex;
     flex-direction: column;
     position: absolute;
     right: 1.5rem;
@@ -145,6 +143,7 @@ header{
     padding: 1rem;
     border-radius: 10px;
     border: 1px solid #cfcece;
+    display: none;
 }
 
 /*****************************
@@ -205,7 +204,7 @@ header{
     font-weight: 500;
     font-size: 1.5rem;
 }
-.contenedor-servicios button{
+#boton-descargar{
     background-color: transparent;
     font-family: 'Poppins', sans-serif;
     font-size: 1rem;
@@ -213,8 +212,9 @@ header{
     margin-top: 1.5rem;
     border-radius: 10px;
     border: 4px solid #1EBCE2;
+    cursor: pointer;
 }
-.contenedor-servicios button a{
+#boton-descargar a{
     text-decoration: none;
     color: #111111;
 }
@@ -233,11 +233,8 @@ header{
     padding-top: 1.2rem;
     width: 35vw;
 }
-
-.sucursales label{
-    font-size: 1.3rem;
-    text-align: center;
-    padding: 2rem 0 0.5rem 0;
+.sucursales{
+    margin-top: 1.5rem;
 }
 .sucursales select{
     font-family: 'Poppins', sans-serif;
@@ -245,9 +242,10 @@ header{
     padding: .5rem;
     background-color: transparent;
     border-color: #FAFAFA;
+    margin: 1.5rem 0 .5rem 0;
 }
-.sucursales .provincias option:selected{
-    border: none;
+select:focus{
+    outline: none;
 }
 
 /*****************************
@@ -502,7 +500,7 @@ footer .contenedor-registro #ver-mas{
         display: flex;
         flex-direction: column;
     }
-    .contenedor-servicios button {
+    #boton-descargar {
         font-size: .7rem;
         padding: 0.1rem 0.7rem;
         border: 2px solid #1EBCE2;
