--- a/style.css
+++ b/style.css
@@ -229,6 +229,97 @@ header{
     text-decoration: none;
     color: #111111;
 }
+/*****************************
+    seccion facturas 
+******************************/
+.seccion-facturas{
+    background-image: url(http://ticket.pluspagos.com:4703/img/bk.jpg);
+    font-family: 'Poppins', sans-serif;
+    flex-direction: column;
+    position: relative;
+    display: none;
+}
+.seccion-facturas img{
+    width: 100vw;
+}
+.seccion-facturas .contenedor-id{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #FAFAFA;
+    margin-top: 2rem;
+}
+.contenedor-id label{
+    font-size: 1.8rem;
+    width: 25vw;
+    text-align: center;
+    font-weight: 500;
+}
+.contenedor-id input{
+    border-radius: 15px;
+    border: none;
+    width: 25rem;
+    height: 3rem;
+    padding: 1rem;    
+    margin-top: 2rem;
+    font-size: 1.5rem;
+}
+.contenedor-id input:focus{
+    outline: none;
+}
+
+.seccion-facturas input[type=number]::-webkit-inner-spin-button, 
+.seccion-facturas input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+.seccion-facturas .contenedor-id button{
+    background-color: #00BED6;
+    color: #FAFAFA;
+    padding: 0.5rem 2rem;
+    border: none;
+    border-radius: 10px;
+    font-size: 1.2rem;
+    margin-top: 2rem;
+    cursor: pointer;
+}
+
+/*****************************
+    modal
+******************************/
+.seccion-facturas .modal{
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 22vw;
+    left: 35vw;
+    padding: 2rem 5rem;
+    background-color: #fafafaef;
+    border-radius: 10px;
+}
+.seccion-facturas .modal p{
+    line-height: 2rem;
+    font-size: 1.2rem;
+}
+.seccion-facturas .modal,
+.cerrar-modal{
+    color: #5d5d5d;
+}
+.cerrar-modal{
+    margin-top: 4rem;
+    font-size: .8rem;
+    padding: .5rem;
+    background-color: transparent;
+    border: 1px solid #5d5d5d;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.cerrar-modal:hover{
+    background-color: #5d5d5d;
+    color: #fafafa;
+}
 
 /*****************************
     seccion sucursales 
