--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ header,
 .seccion-sucursales{
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
 }
 .header-accesos,
 .seccion-box,
@@ -185,19 +186,58 @@ header{
     grid-template-columns: auto auto;
     justify-content: center;
     align-items: center;
-    width: 70vw;
+    width: 100vw;
+}
+.contenedor-hover{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 .contenedor-box-img{
-    width: 80%;
-    height: 5%;
-    margin: 0 3rem 1.5rem 3rem;
+    position: relative;
+    width: 100%;
+    height: 30%;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.50);
+    cursor: pointer;
+    margin-top: 1.5rem;    
 }
-
+.primer-columna{
+    margin-right: 2rem;
+}
+.segunda-columna{
+    margin-left: 2rem;
+}
 .contenedor-box-img img{
     width: 100%;
-    border-radius: 10px;
-    cursor: pointer;
-    filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.7)); 
+    height: 100%;
+    transition: all 500ms ease-out;
+}
+.contenedor-box-img .capa{
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(184, 207, 216, 0.667);
+    transition: all 500ms ease-out;
+    opacity: 0;
+    visibility: hidden;
+    text-align: center;
+}
+.contenedor-box-img:hover > .capa{
+    opacity: 1;
+    visibility: visible;
+}
+
+.contenedor-box-img .capa h4{
+    color: #111111;
+    font-weight: 800;
+    transition: all 500ms ease-out;
+    margin-top: 70px;
 }
 /*****************************
     seccion cuenta 
@@ -242,7 +282,9 @@ header{
     background-color: #ffffff;
 
 }
-
+#anuncio{
+    margin-top: 1.5rem;
+}
 /*****************************
     seccion-impuestos
 ******************************/
@@ -410,13 +452,18 @@ header{
     width: 100%;
     height: 100%;
 }
+.sucursales-buscador{
+    width: 50vw;
+}
 .sucursales-texto h3{
     font-size: 3rem;
+    text-align: center;
 }
 .sucursales-texto p{
     font-size: 1.5rem;
     padding-top: 1.2rem;
     width: 35vw;
+    text-align: center;
 }
 .sucursales{
     margin-top: 1.5rem;
